--- a/index.html
+++ b/index.html
@@ -179,6 +179,16 @@
                     <a href="http://www.github.com/bishisht" class="btn btn-lg btn-outline">
                         <i class="fa fa-github"></i> GitHub
                     </a>
+                    <a href="http://www.facebook.com/kale.moro" class="btn btn-lg btn-outline">
+                        <i class="fa fa-facebook"></i> Facebook
+                    </a>
+                    <a href="http://www.twitter.com/bishishtb" class="btn btn-lg btn-outline">
+                        <i class="fa fa-twitter"></i> Twitter
+                    </a>
+                    <a href="#" class="btn btn-lg btn-outline">
+                         I <i class="fa fa-heart"></i> <i class="fa fa-beer"></i>
+                    </a>
+                  
                 </div>
             </div>
         </div>
@@ -195,7 +205,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                  <h3>bhattabishisht at_the_rate gmail dot com</h3>
+                  <h3 class="text-center">bhattabishisht at_the_rate gmail dot com</h3>
+                  <h3 class="text-center">http://www.bishisht.wordpress.com/</h3>
+                  <h3 class="text-center">http://www.bishisht.livejournal.com/</h3>
+                  <h3 class="text-center">
                 </div>
             </div>
         </div>
