--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="intro-text">
                         <span class="name">Bishisht Bhatta</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Project Manager - Linux System Administrator</span>
+                        <span class="skills">Web Developer - Project Manager - Linux System Administrator - Enterpreneur</span>
                     </div>
                 </div>
             </div>
@@ -188,7 +188,7 @@
                     <a href="#" class="btn btn-lg btn-outline">
                          I <i class="fa fa-heart"></i> <i class="fa fa-beer"></i>
                     </a>
-                  
+
                 </div>
             </div>
         </div>
