--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Santoshi Tol<br>Aithpur, MNR, Nepal 10400</p>
+                        <p>Susi Tol<br>Aithpur, MNR, Nepal 10400</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -254,7 +254,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; bishisht.github.io 2015
+                        Copyright &copy; bishisht.github.io 2017
                     </div>
                 </div>
             </div>
