Feat: Added Cloud Engineering section with S3 static site experience and updated navigation.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#experience">Experience</a></li>
+                    <li><a href="#cloud-engineering">Cloud</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -107,6 +108,21 @@
                     <h4>Narmada Infosys</h4>
                     <h5>Sept 2016 - Present | Far-Western Nepal</h5>
                     <p>Pioneered internet connectivity in some of the world's most remote regions. This venture required engineering robust, off-grid wireless networks and managing extreme logistics, from multi-day treks for site surveys to deploying infrastructure on high-altitude towers. It was an exercise in resilience, blending advanced radio frequency engineering with raw perseverance.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Cloud Engineering Section -->
+    <section id="cloud-engineering">
+        <div class="container">
+            <h2 class="scroll-animate">Cloud Engineering</h2>
+            <div style="max-width: 800px; margin: auto;">
+                <div class="experience-item scroll-animate">
+                    <h3>Static Website Hosting on AWS S3</h3>
+                    <h4>Amazon Web Services (AWS)</h4>
+                    <h5>Project | 2024</h5>
+                    <p>Successfully deployed and configured a static website using Amazon S3, demonstrating proficiency in cloud-based object storage for web hosting. This involved setting up S3 buckets, configuring them for static website hosting, managing permissions, and ensuring public accessibility for web content.</p>
                 </div>
             </div>
         </div>
