feat: Add AWS QuickSight project to portfolio

--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
                     <h5>Project | 2024</h5>
                     <p>Successfully deployed and configured a static website using Amazon S3, demonstrating proficiency in cloud-based object storage for web hosting. This involved setting up S3 buckets, configuring them for static website hosting, managing permissions, and ensuring public accessibility for web content.</p>
                 </div>
+                <div class="experience-item scroll-animate">
+                    <h3>Data Visualization with AWS QuickSight</h3>
+                    <h4>Amazon Web Services (AWS)</h4>
+                    <h5>Project | 2024</h5>
+                    <p>Visualized data stored in Amazon S3 using AWS QuickSight. This project involved connecting QuickSight to S3, preparing the data, and building interactive dashboards and visualizations to analyze the dataset.</p>
+                </div>
             </div>
         </div>
     </section>
