feat: add mass emailing project to portfolio

--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                         <p>A complete DevOps project utilizing Docker, Nginx, and robust system hardening.</p>
                     </div>
                 </div>
+                <div class="portfolio-item scroll-animate" style="transition-delay: 300ms;" data-modal-target="massEmailingModal">
+                    <img src="img/portfolio/server.svg" alt="Mass Emailing System Project">
+                    <div class="portfolio-caption">
+                        <h4>Mass Emailing System</h4>
+                        <p>A robust and scalable mass emailing system built with Listmonk and AWS SES.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -246,6 +253,37 @@
                 <li>Demonstrated ability to provision, deploy, monitor, and maintain services in a resource-constrained environment.</li>
                 <li>Developed operational scripts and integrated reverse proxy and logging mechanisms.</li>
                 <li>Gained hands-on experience relevant to DevOps, infrastructure automation, and self-hosted solutions.</li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="massEmailingModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2>Mass Emailing System</h2>
+            <img src="img/portfolio/server.svg" alt="Mass Emailing System Project Image">
+            <h3>Overview:</h3>
+            <p>A robust and scalable mass emailing system built with Listmonk and Amazon Simple Email Service (SES). This project allows for managing large mailing lists, creating and sending email campaigns, and tracking campaign performance.</p>
+            <h3>Key Features:</h3>
+            <ul>
+                <li>Managed large mailing lists with ease.</li>
+                <li>Created and sent email campaigns seamlessly.</li>
+                <li>Tracked campaign performance with detailed analytics.</li>
+            </ul>
+            <h3>Infrastructure & Deployment:</h3>
+            <ul>
+                <li>Dockerized deployment for portability and scalability.</li>
+                <li>Nginx reverse proxy for secure and efficient traffic routing.</li>
+                <li>Certbot for automated SSL certificate management (HTTPS).</li>
+                <li>Custom subdomain for easy access.</li>
+            </ul>
+            <h3>Tech Stack:</h3>
+            <ul>
+                <li>Listmonk</li>
+                <li>Amazon Web Services (AWS) Simple Email Service (SES)</li>
+                <li>Docker</li>
+                <li>Nginx</li>
+                <li>Certbot</li>
             </ul>
         </div>
     </div>
